# BayesianFilter

./: .clang-format  .gitignore  CMakeLists.txt
include/core/: linear_algebra.hpp  math.hpp
include/core/distributions/: distribution.hpp  gaussian.hpp
include/core/filters/: welfords_algorithm.hpp
include/core/state/: dimensions.hpp  state.hpp
include/kalman_filter/: kalman_filter.hpp
include/state/: dimensions.hpp  state.hpp
src/: main.cpp
test/: CMakeLists.txt  distribution_test.cpp  state_test.cpp
